# asyncpg

./: .clang-format  CMakeLists.txt  LICENSE  SqlConnect.cpp  SqlConnect.h  SqlError.cpp  SqlError.h  SqlField.h  SqlRecord.cpp  SqlRecord.h  SqlResult.cpp  SqlResult.h  SqlValue.cpp  SqlValue.h  main.cpp
cmake/: FindLibEvent.cmake  libevent.cmake  libs.cmake  main.cmake
include/asyncpg/: SqlConnect.h  SqlError.h  SqlField.h  SqlRecord.h  SqlResult.h  SqlValue.h
src/: CMakeLists.txt  SqlConnect.cpp  SqlConnect.h  SqlError.cpp  SqlError.h  SqlErrorCategory.cpp  SqlErrorCategory.h  SqlField.cpp  SqlField.h  SqlRecord.cpp  SqlRecord.h  SqlResult.cpp  SqlResult.h  SqlValue.cpp  SqlValue.h  global.h
tests/manual/: CMakeLists.txt  manual.cmake
tests/manual/tst_main_mnl/: CMakeLists.txt  main.cpp
